Fix zigmode bonus following map rotation (next_fragadd).
 - ZigFlag awards are now every 20s

--- a/3zb2/game.cfg
+++ b/3zb2/game.cfg
@@ -44,7 +44,7 @@ set timelimit 5
 set skill 9 
 
 //View Weapons 1=on 0=off
-set vweap 1
+set vwep 1
 
 //Flag keeper mode on/off (default off = 0,on = 1) (get the flag and get points for the time keeping the flag .. your teammates also get points)
 set zigmode 0
