Remove hardcoded Debian specific config, replace with config CVar
  - Add 'basepath' CVar for clients that cannot determine
    main game binary 'basedir' path.
  - Proper fix on duplicate flag issue.
  - Documentation updates

--- a/3zb2/ctfserver.cfg
+++ b/3zb2/ctfserver.cfg
@@ -53,6 +53,9 @@ set skill 5
 //View Weapons 1=on 0=off
 set vwep 1
 
+//Specify 'basedir' (Location of baseq2)
+//set basepath "/usr/share/games/quake2"
+
 //Flag keeper mode on/off (default off = 0,on = 1) (get the flag and get points for the time keeping the flag .. your teammates also get points)
 set zigmode 0
 
