--- a/3zb2/game.cfg
+++ b/3zb2/game.cfg
@@ -52,6 +52,9 @@ set zigmode 0
 //In zigmode, respawn flag after period of flag inactivity
 set zigspawn 1
 
+//Specify 'basedir' (Location of baseq2)
+//set basepath "/usr/share/games/quake2"
+
 //set the spectator mode on/off (default off = 0,on = 1) fire button-catch and release & [ or ] button-select target
 set spectator 0
 
