Add Flagholder kill bonus CVar
 - Killer gains bonus frag for Flagholder kill
 - CVAR 'zigbonus' - enable/disable (default on)
 - Update Pickup_Ammo() - enable as weapon on grenade pickup.
 - Add self->flagholder to DeathmatchScoreboard()
 - Lower 'flag grab' grace time
 - Remove another obsolete function

--- a/3zb2/game.cfg
+++ b/3zb2/game.cfg
@@ -52,6 +52,9 @@ set zigmode 0
 //In zigmode, respawn flag after period of flag inactivity
 set zigspawn 1
 
+//In zigmode, gain extra frag for killing flagholder
+set zigbonus 1
+
 //Specify 'basedir' (Location of baseq2)
 //set basepath "/usr/share/games/quake2"
 
