Restructure and optimise G_RunFrame 'flagholder' functions
 - Fixed original 'zigmode' flag respawn from LAVA/SLIME in ZIGFlagThink()
   * Flag now respawns correctly from LAVE/SLIME in vanilla 'zigmode'.
   * Continue previous behaviour in 'zigspawn' mode, but don't hide flag.
   * Temporary LAVA (e.g. fragpipe) now allows flag recovery in 'zigspawn'.
 - Flag pickup grace time is now reset correctly - ent->flag_pickup_time
 - Flag now dropped if player leaves game - ZIGDeadDropFlag()
 - Changed CVar 'zigbonus' to 'zigkiller' to clarify purpose.
 - Addressed remaining GCC9 warnings

--- a/3zb2/game.cfg
+++ b/3zb2/game.cfg
@@ -53,7 +53,7 @@ set zigmode 0
 set zigspawn 1
 
 //In zigmode, gain extra frag for killing flagholder
-set zigbonus 1
+set zigkiller 1
 
 //Specify 'basedir' (Location of baseq2)
 //set basepath "/usr/share/games/quake2"
