--- a/3zb2/game.cfg
+++ b/3zb2/game.cfg
@@ -58,6 +58,10 @@ set zigkiller 1
 //Specify 'basedir' (Location of baseq2)
 //set basepath "/usr/share/games/quake2"
 
+// Player identification
+set playerid 1
+set playerid_alt 0
+
 //set the spectator mode on/off (default off = 0,on = 1) fire button-catch and release & [ or ] button-select target
 set spectator 0
 
