--- a/3zb2/zig.cfg
+++ b/3zb2/zig.cfg
@@ -1,9 +1,9 @@
 // Do Not Modify This Line
 exec addbot.cfg
 
-//set basepath "/usr/share/games/quake2"
+//set basepath "c:\Program Files\Quake2"
 
-set dmflags 16384
+set dmflags 16388
 set maxclients 8
 set autospawn 3
 
@@ -13,6 +13,8 @@ set zigkiller 1
 set respawn_protection 1
 set ctf 0
 set aimfix 1
+set playerid 1
+set playerid_alt 0
 set spawnbotfar 1
 set botlist default
 set vwep 1
