--- a/3zb2/zig.cfg
+++ b/3zb2/zig.cfg
@@ -13,8 +13,10 @@ set zigkiller 1
 set respawn_protection 1
 set ctf 0
 set aimfix 1
+set fixflaws 1
 set playerid 1
 set playerid_alt 0
+set heavyflag 1
 set spawnbotfar 1
 set botlist default
 set vwep 1
