--- a/3zb2/zig.cfg
+++ b/3zb2/zig.cfg
@@ -16,7 +16,7 @@ set aimfix 1
 set fixflaws 1
 set playerid 1
 set playerid_alt 0
-set heavyflag 1
+set killerflag 1
 set spawnbotfar 1
 set botlist default
 set vwep 1
