Add optional 'grapple'
  - CTF pak0.pak required
    * CVar 'set zigrapple 1'
  - Reduce floating heads in new physics via 'fixflaws'

--- a/3zb2/zig.cfg
+++ b/3zb2/zig.cfg
@@ -10,6 +10,7 @@ set autospawn 3
 set zigmode 1
 set zigspawn 1
 set zigkiller 1
+set zigrapple 0
 set respawn_protection 1
 set ctf 0
 set aimfix 1
