Added RA2 style fast weapon switching to 'weaponswap'
  - Automatic BOT management via 'autobot' CVar
    * Automatically add/remove bots based on connected clients
  - Added game setup spectator mode via 'zigintro' CVar
    * New spectator dogtag in pak file
  - Updated .pak file,
    * Added spectator dogtag
    * Removed duplicated sounds from baseq2 pak0.pak

--- a/3zb2/zig.cfg
+++ b/3zb2/zig.cfg
@@ -6,11 +6,13 @@ exec addbot.cfg
 set dmflags 16388
 set maxclients 8
 set autospawn 3
+set autobot 0
 
 set zigmode 1
 set zigspawn 1
 set zigkiller 1
 set zigrapple 0
+set zigintro 0
 set respawn_protection 1
 set ctf 0
 set aimfix 1
